--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pyTelegramBotAPI = "^3.7.7"
 lxml = "^4.6.3"
 urllib3 = "^1.26.4"
 requests = "^2.25.1"
+Flask = "^1.1.2"
 
 [tool.poetry.dev-dependencies]
 
